completed with json-server

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,21 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>KiteCab</title>
+  <!-- Meta Tags for Cab Service App -->
+  <meta name="description"
+    content="Book rides easily with our cab service app. Enjoy fast, reliable, and affordable transportation with a seamless booking experience. Available 24/7 for local and outstation travel.">
+  <meta name="keywords"
+    content="cab in Raipur, cab in Bhilai,rahul travels,Rahul Travels, cab in Durg, cab in Bilaspur, cab in Korba, cab in Raigarh, cab in Jagdalpur, cab in Ambikapur, cab in Nagpur, taxi booking, car rental, local travel, outstation rides, affordable cab, 24/7 transportation, easy cab booking, cab app, car booking service, reliable cabs, railway station drop, Airport Drop, one way taxi, Round trip taxi, outstation taxi">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/20241024_121332.png">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
+
 <body class="mat-typography">
   <app-root></app-root>
 </body>
