--- a/src/index.html
+++ b/src/index.html
@@ -3,20 +3,36 @@
 
 <head>
   <meta charset="utf-8">
-  <title>KiteCab</title>
-  <!-- Meta Tags for Cab Service App -->
+  <title>KiteCab - Cab Service Fast & Reliable </title>
+  
+  <!-- SEO Meta Tags -->
   <meta name="description"
-    content="Book rides easily with our cab service app. Enjoy fast, reliable, and affordable transportation with a seamless booking experience. Available 24/7 for local and outstation travel.">
+    content="KiteCab provides reliable, fast, and affordable cab services in Chhattisgarh and More Places. Book a cab for local or outstation trips with 24/7 availability. Experience smooth travel with professional drivers and well-maintained vehicles.">
   <meta name="keywords"
-    content="cab in Raipur, cab in Bhilai,rahul travels,Rahul Travels, cab in Durg, cab in Bilaspur, cab in Korba, cab in Raigarh, cab in Jagdalpur, cab in Ambikapur, cab in Nagpur, taxi booking, car rental, local travel, outstation rides, affordable cab, 24/7 transportation, easy cab booking, cab app, car booking service, reliable cabs, railway station drop, Airport Drop, one way taxi, Round trip taxi, outstation taxi">
-  <base href="/">
+    content="cab in Raipur,kite cab, kitcab, kitekab, cab in Bhilai, Rahul Travels, cab in Durg, cab in Bilaspur, cab in Korba, cab in Raigarh, cab in Jagdalpur, cab in Ambikapur, cab in Nagpur, taxi booking, car rental, local travel, outstation rides, affordable cab, 24/7 transportation, easy cab booking, reliable cabs, railway station drop, Airport Drop, one-way taxi, round trip taxi, outstation taxi, rahul travels, raipur airport taxi">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/20241024_121332.png">
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="assets/20241024_121332.png">
+  
+  <!-- Fonts and Icons -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <!-- Open Graph Meta Tags for Social Media Sharing -->
+  <meta property="og:title" content="KiteCab - Cab Service Fast & Reliable ">
+  <meta property="og:description" content="Get to your destination safely and quickly with KiteCab's trusted cab services. Available 24/7 for both local and outstation travel. Book now and enjoy seamless rides!">
+  <meta property="og:image" content="https://kitecab.com/assets/20241024_121332.png"> <!-- Ensure this path is correct -->
+  <meta property="og:url" content="https://kitecab.com"> <!-- Replace with your actual domain URL -->
+  <meta property="og:type" content="website">
+
+  <!-- Additional SEO Meta Tags -->
+  <meta name="robots" content="index, follow">
+  <meta name="author" content="KiteCab">
 </head>
 
 <body class="mat-typography">
   <app-root></app-root>
 </body>
+
 </html>
