added sendGrid mail

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>KiteCab - Cab Service Fast & Reliable </title>
-  
+  <base href="/">
   <!-- SEO Meta Tags -->
   <meta name="description"
     content="KiteCab provides reliable, fast, and affordable cab services in Chhattisgarh and More Places. Book a cab for local or outstation trips with 24/7 availability. Experience smooth travel with professional drivers and well-maintained vehicles.">
@@ -13,8 +13,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="assets/20241024_121332.png">
-  
+  <link rel="icon" type="image/png" href="https://kitecab.com/assets/20241024_121332.png">
   <!-- Fonts and Icons -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
