--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="https://kitecab.com/assets/20241024_121332.png">
+  <link rel="icon" href="assets/favicon.ico">
+  <!-- <link rel="icon" href="https://kitecab.com/assets/favicon.ico"> -->
   <!-- Fonts and Icons -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
