--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-
+<!-- Google tag (gtag.js) -->
 <head>
   <meta charset="utf-8">
   <title>KiteCab - Cab Service Fast & Reliable </title>
@@ -29,6 +29,14 @@
   <!-- Additional SEO Meta Tags -->
   <meta name="robots" content="index, follow">
   <meta name="author" content="KiteCab">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-460297748">
+  </script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'AW-460297748');
+  </script>
 </head>
 
 <body class="mat-typography">
